fixed card size on mobile & nav is more flexible

--- a/static/styles.css
+++ b/static/styles.css
@@ -95,8 +95,8 @@
         margin: 0;
     }
     .card{
-        width: 180px;
-        font-size: 80%;
+        width: 160px;
+        font-size: 14px;
     }
     .card h5{
         font-size: 14px;
